feat: Completion of looplab

--- a/looplab/css/style.css
+++ b/looplab/css/style.css
@@ -37,3 +37,10 @@ body {
   padding: 5px;
   border-radius: 5px;
 }
+
+.fas--bg-dark {
+  background-color: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 5px;
+}
