--- a/mizuxe/css/style.css
+++ b/mizuxe/css/style.css
@@ -12,4 +12,18 @@ body {
   padding-right: 1.4rem;
 }
 
+.showcase {
+  position: relative;
+  background: url("../img/mountains.jpg");
+  min-height: 600px;
+}
+.showcase .primary-overlay {
+  background: rgba(50, 146, 166, 0.8);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+}
+
 /*# sourceMappingURL=style.css.map */
