--- a/mizuxe/css/style.css
+++ b/mizuxe/css/style.css
@@ -26,4 +26,17 @@ body {
   width: 100%;
 }
 
+@media (max-width: 768px) {
+  .showcase {
+    min-height: 500px;
+  }
+  .showcase h1 {
+    font-size: 4rem;
+  }
+
+  .mb-resp {
+    margin-bottom: 1rem;
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
